@startuml

title __CLIENT's Class Diagram__\n

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.client {
      class AuthorizeHelper {
          {static} - reader : BufferedReader
          {static} ~ enter()
          {static} ~ promptHidden()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.client {
      class Client {
          {static} - scanner : Scanner
          {static} - receiver : Receiver
          {static} - port : int
          {static} + main()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.client {
      class CommandReader {
          - id : int
          {static} - SENDING_PORT : int
          - port : int
          ~ CommandReader()
          ~ IMMA_CHARGIN_MAH_LAZER()
          - processCommand()
          - doImport()
          - doWithRoomArgument()
          - doWithFilenameArgument()
          - doRegister()
          - doLogin()
          - send()
          - waitForServerResponse()
          {static} - getNextCommand()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.client {
      class Room {
          - name : String
          - height : int
          - width : int
          - depth : int
          - x : int
          - y : int
          - clock : Clock
          - creationDate : LocalDateTime
          - size : int
          ~ Room()
          ~ Room()
          + Room()
          + getShelf()
          + setBounds()
          + setPosition()
          + setSize()
          + getX()
          + getY()
          + setX()
          + setY()
          + getDepth()
          + getWidth()
          + getHeight()
          + setWidth()
          + setHeight()
          + getName()
          + setName()
          + getCreationDate()
          + compareTo()
          + toString()
          + equals()
          + hashCode()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.client {
      class Shelf {
          - thingcount : int
          - name : String
          + Shelf()
          + Shelf()
          + Shelf()
          + setThingcount()
          + getThingcount()
          + getName()
          + setName()
          + equals()
          + hashCode()
      }
    }
  }
  

  package ifmo.programming.lab7 {
    package ifmo.programming.lab7.client {
      class RoomFactory {
          {static} ~ makeRoomFromJSON()
          {static} ~ makeRoomsFromJSON()
      }
    }
  }
  

  CommandReader o-- Receiver : receiver
  Room -up-|> Comparable
  Room -up-|> Serializable
  Room o-- Shelf : shelf
  Room +-down- Shelf
  Shelf -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
